<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.softwareconcepts.stocktake.MainActivity" >

    <item android:id="@+id/action_email_csv"
          android:icon="@drawable/ic_email"
          android:orderInCategory="100"
          android:title="@string/email_csv_file"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_delete_all"
          android:icon="@drawable/ic_action_delete"
          android:orderInCategory="101"
          android:title="@string/create_new_batch"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_details"
          android:icon="@drawable/ic_action_info"
          android:orderInCategory="102"
          android:title="@string/details"
          android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    

</menu>
