<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_small_margin"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/warehouse_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/batch_lines_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_logo"
        android:gravity="center"
        android:scrollbars="none"
        android:visibility="invisible" >

        <TableLayout
            android:id="@+id/batch_lines_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:background="@drawable/table_border" >

            <TableRow
                android:id="@+id/header_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <View
                    android:layout_width="0dip"
                    android:layout_height="0dip" />

                <TextView
                    android:id="@+id/items_header_text_view"
                    style="@style/MyLabelTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_weight="0.5"
                    android:text="@string/item"
                    android:textSize="@dimen/batch_header_text_size" />

                <TextView
                    android:id="@+id/qty_header_text_view"
                    style="@style/MyLabelTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_weight="0.2"
                    android:text="@string/qty"
                    android:textSize="@dimen/batch_header_text_size" />
                
                <TextView
                    android:id="@+id/rackNo_header_text_view"
                    style="@style/MyLabelTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_weight="0.2"
                    android:text="@string/rack"
                    android:textSize="@dimen/batch_header_text_size" />

                <View
                    android:layout_height="0dip"
                    android:layout_weight="0.1" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@drawable/empty_view_border" />
        </TableLayout>
    </ScrollView>

    <SlidingDrawer
        android:id="@+id/slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dip"
        android:content="@+id/contentLayout"
        android:handle="@+id/slideHandleButton"
        android:orientation="vertical"
        android:padding="@dimen/activity_small_margin" >

        <Button
            android:id="@+id/slideHandleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/closearrow" >
        </Button>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"
            android:gravity="center|top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/item_edit_text"
                    style="@style/MyDialogEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/item"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="13"
                    android:maxLines="1">
                </EditText>

                <ImageView
                    android:id="@+id/barcode_imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:clickable="true"
                    android:layout_marginEnd="@dimen/activity_vertical_margin_table"
                    android:layout_marginStart="@dimen/activity_small_margin"
                    android:contentDescription="@string/barcode"
                    android:src="@drawable/barcode_ecommerce" />
            </LinearLayout>

            <EditText
                android:id="@+id/qty_edit_text"
                style="@style/MyDialogEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/qty"
                android:inputType="number"
                android:lines="1"
                android:maxLength="18"
                android:maxLines="1"
                android:text="@string/default_qty" />
            
            <EditText
                android:id="@+id/rack_edit_text"
                style="@style/MyDialogEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/rack_no"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:lines="1"
                android:maxLength="18"
                android:maxLines="1" />

            <Button
                android:id="@+id/batch_line_done_button"
                style="@style/MyDialogButtonBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_small_margin"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/done" />
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>